deploy/kubernetes/istio/istio_config/istio-ingressgateway.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"istio-ingressgateway","install.operator.istio.io/owning-resource":"unknown","install.operator.istio.io/owning-resource-namespace":"istio-system","istio":"ingressgateway","istio.io/rev":"default","operator.istio.io/component":"IngressGateways","operator.istio.io/managed":"Reconcile","operator.istio.io/version":"1.10.0","release":"istio"},"name":"istio-ingressgateway","namespace":"istio-system"},"spec":{"ports" [...]
  creationTimestamp: "2022-09-05T11:31:10Z"
  labels:
    app: istio-ingressgateway
    install.operator.istio.io/owning-resource: unknown
    install.operator.istio.io/owning-resource-namespace: istio-system
    istio: ingressgateway
    istio.io/rev: default
    operator.istio.io/component: IngressGateways
    operator.istio.io/managed: Reconcile
    operator.istio.io/version: 1.10.0
    release: istio
  name: istio-ingressgateway
  namespace: istio-system
  resourceVersion: "17968"
  uid: 06ee16a4-f9e6-489c-ae49-8a01ccf3bd41
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.96.199.28
  clusterIPs:
    - 10.96.199.28
  externalIPs:
    - 192.168.31.148
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: status-port
      nodePort: 30513
      port: 15021
      protocol: TCP
      targetPort: 15021
    - name: http2
      nodePort: 32706
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      nodePort: 30745
      port: 443
      protocol: TCP
      targetPort: 8443
    - name: tcp
      nodePort: 32596
      port: 31400
      protocol: TCP
      targetPort: 31400
    - name: tls
      nodePort: 30732
      port: 15443
      protocol: TCP
      targetPort: 15443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
