deploy/kubernetes/istio/istio_config/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: coolcar-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zero-gateway
spec:
  hosts:
  - "*"
  gateways:
  - zero-gateway
  http:
  - match:
    - uri:
        prefix: /user
    route:
    - destination:
        port:
          number: 8889
        host: user-api-svc
  - route:
    - destination:
        port:
          number: 8080
        host: user-api-svc
